adicionado projeto MultiBus para multiplos serviços de mensageria

--- a/src/MultiBus/MultiBus.Api/MultiBus.Api.csproj
+++ b/src/MultiBus/MultiBus.Api/MultiBus.Api.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>230a069e-c1e7-4d1a-ae21-8c105c82cc5f</UserSecretsId>
+    <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>b29055e3-7045-4e34-bc8f-4d971c7aeea6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <LangVersion>preview</LangVersion>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MessageQueueBasic.MessageBroker\MessageQueueBasic.MessageBroker.csproj" />
+    <ProjectReference Include="..\BultiBus.MessageQueue\BultiBus.MessageQueue.csproj" />
   </ItemGroup>
 
 </Project>
