--- a/src/Basic/MessageQueueBasic.MessageBroker/MessageQueueBasic.MessageBroker.csproj
+++ b/src/Basic/MessageQueueBasic.MessageBroker/MessageQueueBasic.MessageBroker.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sds.MessageQueue.Core\Sds.MessageQueue.Core.csproj" />
+  </ItemGroup>
+
 </Project>
