FEAT: Ajuste nas classes para receber mensagem

--- a/src/FaultHandling/FaultHandling.Api/appsettings.Development.json
+++ b/src/FaultHandling/FaultHandling.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   "QueueSettings": {
     "Host": "localhost",
     "VirtualHost": "/",
-    "Port": "",
+    "Port": "0",
     "UserName": "guest",
     "Password": "guest"
   }
